# gotchi-stats-calculator

./: Cargo.toml  README.md  index.html  index.scss
docs/: index-5b0badb865f67be2.js  index-5b0badb865f67be2_bg.wasm  index-e81e8d85e8942584.css  index.html
src/: app.rs  gotchi.rs  main.rs
